update user endpoint
